Fix display issue on small height devices on quickchatforwhatsapp app

--- a/portfolio/quickchat-for-whatsapp/style.css
+++ b/portfolio/quickchat-for-whatsapp/style.css
@@ -61,10 +61,9 @@ html,
 body {
     padding: 0;
     margin: 0;
-    overflow: hidden;
     width: 100vw;
-    height: 100vh;
-    height: var(--app-height);
+    min-height: 100%;
+    min-height: var(--app-height);
 }
 
 body{
@@ -75,7 +74,6 @@ body{
     align-items: center;
     background: var(--primary-color);
     padding: 2rem;
-    overflow: hidden;
 }
 
 .jao-ws{
